main/default/objects/Category__c/fields/Baseline_Savings__c.field-meta.xml
<CustomField>
    <fullName>Baseline_Savings__c</fullName>
    <description>Baseline Savings</description>
    <inlineHelpText>Baseline Savings</inlineHelpText>
    <label>Baseline Savings</label>
    <summarizedField>SubCategory__c.Realized_Savings__c</summarizedField>
    <summaryForeignKey>SubCategory__c.Category__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>