main/default/objects/Category__c/fields/Baseline_Spent__c.field-meta.xml
<CustomField>
    <fullName>Baseline_Spent__c</fullName>
    <description>Baseline Spent</description>
    <inlineHelpText>Baseline Spent</inlineHelpText>
    <label>Baseline Spent</label>
    <summarizedField>SubCategory__c.Realized_Spent__c</summarizedField>
    <summaryForeignKey>SubCategory__c.Category__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>