main/default/objects/Category__c/fields/Category_No__c.field-meta.xml
<CustomField>
    <fullName>Category_No__c</fullName>
    <description>Category Number</description>
    <displayFormat>CAT-{000000}</displayFormat>
    <inlineHelpText>Category Number</inlineHelpText>
    <label>Category No</label>
    <type>AutoNumber</type>
</CustomField>