main/default/objects/Category__c/fields/Forecast_Savings__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Savings__c</fullName>
    <description>Forecast Savings</description>
    <inlineHelpText>Forecast Savings</inlineHelpText>
    <label>Forecast Savings</label>
    <summarizedField>SubCategory__c.Forecast_Savings__c</summarizedField>
    <summaryForeignKey>SubCategory__c.Category__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>