main/default/objects/Category__c/fields/Forecast_Spent__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Spent__c</fullName>
    <description>Forecast Spent</description>
    <inlineHelpText>Forecast Spent</inlineHelpText>
    <label>Forecast Spent</label>
    <summarizedField>SubCategory__c.Forecast_Spent__c</summarizedField>
    <summaryForeignKey>SubCategory__c.Category__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>