main/default/objects/Category__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Category_No__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>